--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -123,10 +123,22 @@
 <div class="b4">
     <img  class="pine2" src="pineapple.png" alt="">
 </div>
-<div>
 
+<br><br>
+
+<div>
+<h2 class="end">GET UPDATED</h2>
 
 </div>
+
+
+<div>
+<center> <h3> <i> subscribe and get notified of our weekly offers </i> </h3> </center>
+</div>
+
+<div>
+    <input placeholder="send feedback " class="feed" type="text">
+ </div>
 
 
 
